[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpi-driver"
version = "0.0.10"
description = "Quantum Processing Interface (QPI) Hardware Driver"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Martin Ahindura", email = "team.sopherapps@gmail.com" },
]
dependencies = [
    "numpy>=2.0.0",
    "xarray>=2024.1.0",
    "pynng>=0.8.0",
    "requests>=2.31.0",
    "qiskit>=1.0.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "qiskit_qasm3_import"
]

[project.optional-dependencies]
cli = ["typer>=0.9.0"]
aer = ["qiskit-aer>=0.14.0"]
quantify = [
    "quantify-scheduler",
    "qblox-instruments"
]
qblox = [
    "qblox-scheduler>=1.0.0b1",
    "qblox-instruments"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/sopherapps/qpi"
Repository = "https://github.com/sopherapps/qpi"
Documentation = "https://sopherapps.github.io/qpi/driver/"
Issues = "https://github.com/sopherapps/qpi/issues"
Changelog = "https://github.com/sopherapps/qpi/blob/main/CHANGELOG.md"

[project.scripts]
qpi-driver = "qpi_driver.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["qpi_driver*"]

[tool.uv]
override-dependencies = [
    "pyqt5-qt5>=5.15.10",
    "pyqt5>=5.15.10",
    "qcodes<0.57"
]
