[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpi-client"
version = "0.0.9"
description = "Python client SDK for the QPI quantum computing platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "qiskit>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/sopherapps/qpi"
Repository = "https://github.com/sopherapps/qpi"

[tool.setuptools.packages.find]
include = ["qpi_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
